--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,13 +27,13 @@
               </div>
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/">首页</a></li>
+                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">连接</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/archive.html">目录</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/about.html">关于</a></li>
+                   
                     {% if site.github != '' %}
-                      <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
+                      <li class="active"><a href="https://github.com/{{ site.github }}">Github主页</a></li>
                     {% endif %}
                 </ul>
               </div>
